# codeclaw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.deploy  README.md  README_zh.md  fly.toml  plan.md  pyproject.toml  setup.sh
.github/workflows/: bump-version.yml  skills-only.yml  test.yml  update-tokens.yml
clawcode/: config.py  container_runner.py  container_runtime.py  db.py  env.py  group_folder.py  group_queue.py  ipc.py  main.py  mount_security.py  router.py  task_scheduler.py  webhook_server.py
clawcode/channels/: github.py
clawcode/github/: access_control.py  auth.py  event_mapper.py
codeclaw/: config.py  container_runner.py  container_runtime.py  db.py  env.py  group_folder.py  group_queue.py  ipc.py  logger.py  main.py  models.py  mount_security.py  router.py  task_scheduler.py  webhook_server.py
codeclaw/channels/: github.py
codeclaw/github/: access_control.py  auth.py  event_mapper.py
container/: Dockerfile  build.sh
container/agent_runner/: ipc_tools.py  main.py  requirements.txt
docs/: DEBUG_CHECKLIST.md  REQUIREMENTS.md  SDK_DEEP_DIVE.md  SECURITY.md  SPEC.md
groups/global/: CLAUDE.md
launchd/: com.clawcode.plist  com.codeclaw.plist
repo-tokens/: README.md  action.yml
setup/: github-app.ts  github_app.py  index.ts  register.ts  service.ts  verify.ts
src/: container-runner.ts  db.test.ts  db.ts  index.ts  mount-security.ts  router.ts  routing.test.ts  webhook-server.ts
tests/: conftest.py  test_container_runtime.py  test_db.py  test_formatting.py  test_group_folder.py  test_group_queue.py  test_ipc_auth.py
(+17 files in other folders)
